--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,10 @@ default: &default
   pool: 5
 
 development:
-  <<: *default
+  # <<: *default
+  adapter: sqlite3
+  encoding: unicode
+  pool: 5
   database: Datong_development
 
   # The specified database role being used to connect to postgres.
@@ -56,7 +59,10 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
-  <<: *default
+  #<<: *default
+  adapter: sqlite3
+  encoding: unicode
+  pool: 5
   database: Datong_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
